<?xml version="1.0"?>
<package format="2">
  <name>laser_uav_estimator</name>
  <version>0.0.0</version>
  <description>The laser_uav_estimator package</description>

  <maintainer email="cauetnunesp@gmail.com">Cauet Nunes Pereira</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>nodelet</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>mrs_lib</depend>
  <depend>mrs_msgs</depend>
  <depend>std_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <nodelet plugin="${prefix}/plugins.xml" />

  </export>
</package>
